@@ -1,5 +1,12 @@
 2006-10-17  Mark Shinwell  <shinwell@codesourcery.com>
 
+	* elf32-arm.c (elf32_arm_final_link_relocate): Add support for
+	R_ARM_MOVW_BREL_NC, R_ARM_MOVW_BREL, R_ARM_MOVT_BREL,
+	R_ARM_THM_MOVW_BREL_NC, R_ARM_THM_MOVW_BREL and
+	R_ARM_THM_MOVT_BREL relocations.
+
+2006-10-17  Mark Shinwell  <shinwell@codesourcery.com>
+
         * elf32-arm.c (elf32_arm_howto_table_1): Change offset for
         R_THM_CALL to 25 and remove FIXME comment.
         (using_thumb2): New function.
